Bug 107745 - [bisected] [bdw bsw] piglit.­spec.­arb_fragment_shader_interlock.­arb_fragment_shader_interlock-image-load-store failure
Summary: [bisected] [bdw bsw] piglit.­spec.­arb_fragment_shader_interlock.­arb_fragmen...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Jason Ekstrand
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-30 02:54 UTC by Clayton Craft
Modified: 2018-08-30 19:07 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Clayton Craft 2018-08-30 02:54:54 UTC
Output:
/tmp/build_root/m64/lib/piglit/bin/arb_fragment_shader_interlock-image-load-store -auto -fbo
piglit: debug: Requested an OpenGL 4.2 Core Context, and received a matching 4.5 context

observed 0 0     0 0 127 255
expected 0 0     47 35 63 255


This has been bisected to the following commit:

commit 37f7983bcca1afd4d570bc654b927a92308d1c68
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Sat Jan 27 13:19:57 2018 -0800

    intel/compiler: Do image load/store lowering to NIR
Comment 1 Jason Ekstrand 2018-08-30 19:07:54 UTC
Fixed by the following commit in master:

commit a0f18f214215931bfe6b27dd86c09ec5bae49103 (public/master)
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Thu Aug 30 12:50:31 2018 -0500

    intel/nir: Lowering image loads and stores trashes all metadata
    
    This fixes the GL_ARB_fragment_shader_interlock piglit test on gen8
    platforms where the lack of metadata dirtying was causing another pass
    to accidentally delete a much needed loop.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=107745
    Fixes: 37f7983bcca1 "intel/compiler: Do image load/store lowering..."
    Jason Ekstrand <jason@jlekstrand.net> writes:
    Reviewed-by: Caio Marcelo de Oliveira Filho <caio.oliveira@intel.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.